# Speaker-Diarization-Graph-Transformers

./: README.md  pyproject.toml
Semi-Supervised Speaker Diarization/: requirements.txt
Semi-Supervised Speaker Diarization/configs/: default.yaml
Semi-Supervised Speaker Diarization/src/: __init__.py  clustering.py  data.py  graph_transformer.py  train.py
scripts/: cluster_embeddings.py  train.py
src/: segmentation.py
